tests/baselines/reference/emitArrowFunctionWhenUsingArguments13_ES6(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments13_ES6.ts(3,14): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments13_ES6.ts(3,14): error TS7006: Parameter 'arguments' implicitly has an 'any' type.


==== emitArrowFunctionWhenUsingArguments13_ES6.ts (2 errors) ====
    function f() {
        var _arguments = 10;
        var a = (arguments) => () => _arguments;
                 ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                 ~~~~~~~~~
!!! error TS7006: Parameter 'arguments' implicitly has an 'any' type.
    }